--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
 }
-
+.custom-container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
